--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://flowbite.com/" class="flex items-center">
                 <img src="./src/images/logo.jpg" class="h-20 mr-3" alt="Flowbite Logo" />
                 <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white capitalize">Firdous
+                <span class="self-center text-[18px] font-semibold whitespace-nowrap dark:text-white capitalize">Firdous
                     travels & tours</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button"
