--- a/index.html
+++ b/index.html
@@ -157,22 +157,34 @@
                     </p>
 
                     <div class="flex justify-center gap-6 flex-wrap mt-4">
-                        <!-- <div class="h-72 w-72">
-                            <img src="./src/images/offers/offer-1.jpg" class="h-full w-full" alt="">
-                        </div> -->
                         <div class="w-72 h-72">
-                            <img src="./src/images/offers/offer-2.jpg" alt="" class="w-full h-full">
+                            <img src="./src/images/offers/uk.jpg" alt="" class="w-full h-full">
                         </div>
                         <div class="w-72 h-72">
-                            <img src="./src/images/offers/offer-3.jpg" alt="" class="w-full h-full">
+                            <img src="./src/images/offers/australia.jpg" alt="" class="w-full h-full">
                         </div>
                         <div class="w-72 h-72">
-                            <img src="./src/images/offers/offer-4.jpg" alt="" class="w-full h-full">
+                            <img src="./src/images/offers/qatar.jpg" alt="" class="w-full h-full">
                         </div>
                         <div class="w-72 h-72">
-                            <img src="./src/images/offers/offer-5.jpg" alt="" class="w-full h-full">
+                            <img src="./src/images/offers/roman.jpg" alt="" class="w-full h-full">
                         </div>
                     </div>
+
+                    <!-- <div class="flex w-full flex-col justify-center sm:justify-between h-[580px] my-2 sm:flex-row sm:px-20 gap-x-4">
+                        <div class="w-[125px] h-[175px] sm:h-[320px] sm:w-[300px]">
+                            <img src="./src/images/landscape-1.jpg" alt="">
+                        </div>
+                        <div class="w-[125px] h-[175px] sm:h-[320px] sm:w-[300px]">
+                            <img src="./src/images/landscape-2.jpg" alt="">
+                        </div>
+                    </div> -->
+
+                    <div class="flex flex-col sm:flex-row justify-center sm:justify-between mt-4 gap-4 items-center px-3">
+                        <img src="./src/images/IMG-20230928-WA0002.jpg" alt="" class="w-72 h-72 sm:h-[525px] sm:w-[375px]">
+                        <img src="./src/images/IMG-20230928-WA0002.jpg" alt="" class="w-72 h-72 sm:h-[525px] sm:w-[375px]">
+                    </div>
+
                 </div>
             </section>
             <section class="px-4 mt-12" id="">
@@ -182,7 +194,7 @@
                     pariatur, dicta accusamus harum similique fugiat eos corrupti quod ullam voluptatem perspiciatis
                     placeat minus. Cumque, explicabo sint.
                 </p>
-                <div class="flex justify-center items-center gap-3 flex-wrap">
+                <div class="flex justify-center items-center gap-6 flex-wrap" id="yt-links">
                     <div>
                         <iframe class="w-[320px] lg:w-[420px] xl:w-[560px] h-[315px]"
                             src=" https://www.youtube.com/embed/awxsLMgpiZg?si=x-YfGqi7e9LysLDQ"
@@ -212,10 +224,68 @@
                             allowfullscreen></iframe>
                     </div>
                     <div>
-                        <iframe class="w-[320px] lg:w-[420px] xl:w-[560px] h-[315px]" src="https://www.youtube.com/embed/4qrtpGLMVsE?si=zebmy6lvwrf4sjrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe class="w-[320px] lg:w-[420px] xl:w-[560px] h-[315px]"
+                            src="https://www.youtube.com/embed/4qrtpGLMVsE?si=zebmy6lvwrf4sjrk"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
+
+
+
+            <footer class="text-gray-600 body-font border-0 border-t-2 mt-4">
+                <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+                    <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
+                            stroke-linejoin="round" stroke-width="2"
+                            class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+                            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                        </svg>
+                        <span class="ml-3 text-xl">Firdous Travels and Tours</span>
+                    </a>
+                    <p
+                        class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">
+                        © 2020 Tailblocks —
+                        <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer"
+                            target="_blank">@knyttneve</a>
+                    </p>
+                    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+                        <a class="text-gray-500">
+                            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                class="w-5 h-5" viewBox="0 0 24 24">
+                                <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                            </svg>
+                        </a>
+                        <a class="ml-3 text-gray-500">
+                            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                class="w-5 h-5" viewBox="0 0 24 24">
+                                <path
+                                    d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                                </path>
+                            </svg>
+                        </a>
+                        <a class="ml-3 text-gray-500">
+                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                                <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                            </svg>
+                        </a>
+                        <a class="ml-3 text-gray-500">
+                            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+                                <path stroke="none"
+                                    d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
+                                </path>
+                                <circle cx="4" cy="4" r="2" stroke="none"></circle>
+                            </svg>
+                        </a>
+                    </span>
+                </div>
+            </footer>
+
         </div>
     </div>
 
